--- a/testing.ipynb
+++ b/testing.ipynb
@@ -7,13 +7,128 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import json\n",
-    "import re"
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Create a new user"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We will create a new user called John:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.get('http://localhost:3500/create/user/John')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Assign chat to user"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### To to it, we will need a chat name,  and then a user name to add into this chat:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.get('http://localhost:3500/chat/Sports/user/John')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Add a new message into a chat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### To add a new message we will have to create the user and the chat first, then we will be able to do it, otherwise it will raise a friendly error:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.get('http://localhost:3500/chat/Sports/user/John/message/I support FC Barcelona, they are the best')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Get all message from some chat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We will make a list with all message from a specific chat:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -23,152 +138,58 @@
        " 'I love Barça and futbol in general, I think all of them are playing really good. You are awesome guys! I love you! Goodnight :)',\n",
        " 'Messi is shit, real Madrid is much better',\n",
        " 'I really hate Barça they don´t even know how to play!',\n",
-       " 'They are amazing, Messi is playing so good in this season']"
+       " 'They are amazing, Messi is playing so good in this season',\n",
+       " 'I support FC Barcelona, they are the best']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = requests.get('http://localhost:3500/chat/Sports/list').json()\n",
-    "\n",
-    "x"
+    "requests.get('http://localhost:3500/chat/Sports/list').json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Analyse the sentiment to the chat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### To analyse it, we will use all sentence created in the chat to be able to analyse one by one, after that we will know if the sentiment of the chat is negative, neutral or positive. To to that we will use NLTK."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-4c0f2355e555>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-4c0f2355e555>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    requests.get('http://localhost:3500/create/user/Clara').\u001b[0m\n\u001b[0m                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'compound': 0.8316, 'neg': 0.0, 'neu': 0.391, 'pos': 0.609}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "requests.get('http://localhost:3500/create/user/Clara').\n",
-    "\n"
+    "requests.get('http://localhost:3500/chat/Sports/sentiment').json()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "requests.get('http://localhost:3500/chat/Sports/user/Luisa')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "requests.get('http://localhost:3500/chat/Motor/user/Luisa/message/Hello, I´ve some issues with my car... I´m really tired of that shit.')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "/chat/<chatname>/list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m_tv = 'The match was awesome, Barça won again','I really hate Barça they don´t even know how to play!','They are amazing, Messi is playing so good in this season','Messi is shit, real Madrid is much better','I love Barça and futbol in general, I think all of them are playing really good. You are awesome guys! I love you! Goodnight :)'\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tv_name = [\"Albert\",\"Didac\", \"Clara\", \"Pepe\",'Luisa']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result_tv = zip(tv_name, m_tv)\n",
-    "user_message_tv = set(result_tv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_message_tv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for name, mess in user_message_tv:\n",
-    "    requests.get(f'http://localhost:3500/chat/Sports/user/{name}/message/{mess}')"
+    "### In the chat Sports our exemple, we can figure out it has a 0.8316 from 1 of compound, it means it has an avarage of positives sentence."
    ]
   }
  ],
