--- a/testing.ipynb
+++ b/testing.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Assign chat to user"
+    "## 2. Assign user to a chat"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Get all message from some chat"
+    "## 4. Get all message from a chat as a list"
    ]
   },
   {
